# py_find_1st

./: INSTALL.txt  LONG_DESCR  MANIFEST.in  Makefile  README.md  ez_setup.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: add-collaborator.yml
test/: benchmark.py  test_find_1st.py
utils_find_1st/: __init__.py  find_1st.cpp
